--- a/RunnersStyle/mod.ini
+++ b/RunnersStyle/mod.ini
@@ -1,18 +1,18 @@
 [Desc]
-Title="Runners Style"
-Description="Sonic Runners style animations and jumpball"
-Version=1.0
-Date="2023/3/21"
 Author="Anonymaus"
+Title="Runners Style"
+Version=1.0
+Description="Sonic Runners style animations and jumpball"
+Date="2023/3/21"
 AuthorURL=""
 
 [Main]
-UpdateServer=""
+UpdateServer="https://raw.githubusercontent.com/MellowMaus/RunnersStyleUpdate/main/RunnersStyle"
 SaveFile=""
-ID=""
-IncludeDir0="."
+ID="D605AAC4"
+IncludeDir0="chr_RunnerDash"
 IncludeDirCount=1
 DependsCount=0
 DLLFile=""
 CodeFile=""
-ConfigSchemaFile=""
+ConfigSchemaFile="config.json"
